--- a/src/style.css
+++ b/src/style.css
@@ -4,39 +4,42 @@ body {
   font-family: Roboto;
 }
 
-* {
-  margin: 0px; 
+
+/* Establezca la altura del cuerpo y del documento al 100% para habilitar las "pestañas de página completa". */
+body, html {
+  height: 100%;
+  margin: 0;
 }
 
-/* Agregue un color de fondo negro a la navegación superior*/
-.topnav {
-  display: flex;
-  justify-content: right;
-  background-color: #333;
-  overflow: hidden;
-}
-  
-  /* Aplicar estilo a los enlaces dentro de la barra de navegación */
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: left;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-  
-  /* Cambiar el color de los enlaces al pasar el mouse */
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  /* Agregue un color al enlace activo / actual */
-.topnav a.active {
-  background-color: #04AA6D;
+/* Establezca estilos para la barra de navegación */
+.BoxNavs {
+  background-color: #555;
   color: white;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  font-size: 17px;
+  width: 25%;
 }
+
+.BoxNavs:hover {
+  background-color: #777;
+}
+
+/* Diseñe el contenido de la pestaña (y agregue altura: 100% para el contenido de la página completa) */
+.Box {
+  color: rgb(0, 0, 0);
+  display: none;
+  padding: 100px 20px;
+  height: 100%;
+}
+
+#Inicio {background-color: rgb(255, 255, 255);}
+#ValidarTarjeta {background-color: rgb(255, 255, 255);}
+#BloquearTarjeta {background-color: rgb(255, 255, 255);}
+#Contactanos {background-color: rgb(255, 255, 255);}
 
 
 /* PIE DE PAGINA */
