--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
 
-body {
-  font-family: Roboto;
-}
-
-
 /* Establezca la altura del cuerpo y del documento al 100% para habilitar las "pestañas de página completa". */
 body, html {
   height: 100%;
@@ -22,10 +17,12 @@ body, html {
   padding: 14px 16px;
   font-size: 17px;
   width: 25%;
+  font-family: Roboto;
 }
 
 .BoxNavs:hover {
   background-color: #777;
+  font-family: Roboto;
 }
 
 /* Diseñe el contenido de la pestaña (y agregue altura: 100% para el contenido de la página completa) */
@@ -34,6 +31,7 @@ body, html {
   display: none;
   padding: 100px 20px;
   height: 100%;
+  font-family: Roboto;
 }
 
 #Inicio {background-color: rgb(255, 255, 255);}
@@ -54,8 +52,49 @@ body, html {
   font-size: xx-small;
   padding-top: 10px;
   padding-bottom: 10px;
+  font-family: Roboto;
 }
 /* ICONOS DE REDES SOCIALES*/
 .redSocial{
   width: 1.125rem;
+}
+
+/* ESTILO DE MAIN: BoxValidarTarjeta */
+
+.ValidarTarjeta{
+  height: 100%;
+  background: white;
+  font-family: sans-serif;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+.BoxValidarTarjeta{
+  width: 90%;
+  max-width: 1000px;
+  padding: 40px20px;
+  margin: auto;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/*ESTILO DE LA TARJETA*/
+
+.Tarjeta{
+  width: 100%;
+  max-width: 550px;
+  position:relative;
+  color: white;
+  transition: .4s ease all;
+  transition: rotateY(0deg);
+  transform-style: preserve-3d;
+  backface-visibility: hidden;
+  cursor: pointer;
+  z-index: 2;
+  background: black;
+}
+
+.Tarjeta:hover {
+  transform: rotateY(180deg);
 }
