--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
 
+@import url(https://fonts.googleapis.com/css?family=Lato|Liu+Jian+Mao+Cao&display=swap);
+
 /* Establezca la altura del cuerpo y del documento al 100% para habilitar las "pestañas de página completa". */
 body, html {
   height: 100%;
@@ -44,10 +46,10 @@ body, html {
 .LogoGifContac {
     width: 200px;
 }
-.LogoRecBlanco{
+.LogoRecBlanco {
   width: 200px;
 }
-.LogoCuadrado{
+.LogoCuadrado {
   width: 200px;
 }
 
@@ -92,7 +94,7 @@ body, html {
 
 /*ESTILO DE LA TARJETA*/
 
-.Tarjeta{
+.Tarjeta {
   width: 100%; 
   max-width: 550px; /* Para que no sea demasiado grande y estaria al mismo nivel que el box normal*/
   position:relative; /* Al elemento padre le ponemos position relative y luego al elemento hijo le ponemos position absolute para que no aparezca debajo*/
@@ -103,9 +105,117 @@ body, html {
   backface-visibility: hidden; /* nos permite que la parte de atras de la tarjeta este oculta cuando se gire*/
   cursor: pointer;/* para que suceda cuando se pase el cursero*/
   z-index: 2; /* nos permite establecer qué capa se muestre. 1:formulario  2:tarjeta 3:botón*/
-  background: black;
+  
 }
 
-.Tarjeta:hover {
-  transform: rotateY(180deg); /* Para que cuando pase el cursor gire 180 grados*/
+/* .Tarjeta:hover {
+  transform: rotateY(180deg);  
+} Para que cuando pase el cursor gire 180 grados pero para que gire cuando demos clic se debe agregar una funcion*/
+
+.Tarjeta.active { /* Al dar clic girara 180 grados por la funcion active*/
+  transform: rotateY(180deg);
+}
+
+
+.Tarjeta > div {
+  padding: 30px;
+  border-radius: 15px;
+  min-height: 315px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-shadow: 0 10px 10px rgba(90, 116, 148, 0.3);
+}
+
+/* Estilo de la Tarjeta Delantera*/
+.Tarjeta .Delantera{
+  width: 100%;
+  background: url(./img/Tarjeta/Fondo.jpg);
+  background-size: cover;
+}
+
+.Delantera .Tipo-logo {
+  text-align: right;
+  min-height: 50px;
+}
+
+.Delantera .Tipo-logo img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  max-width: 80px;
+}
+
+.Delantera .Chip {
+  width: 100%;
+  max-width: 50px;
+  margin-bottom: 20px;
+}
+
+.Delantera .grupo .label {
+  font-size: 16px;
+  color: white;
+  margin-bottom: 5px;
+}
+
+.Delantera .grupo .numero,
+.Delantera .grupo .nombre,
+.Delantera .grupo .expiracion {
+  color: white;
+  font-size: 16px;
+  text-transform: uppercase; /*Asegura que esten en mayusculas*/
+}
+
+.Delantera .flexbox {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+/* Estilo de la Tarjeta Reversa*/
+
+.Reversa {
+  background: url(./img/Tarjeta/Fondo.jpg);
+  background-size: cover;
+  position: absolute;
+  top: 0;
+  transform: rotateY(180deg);
+  backface-visibility: hidden;
+}
+
+.Reversa .Barra {
+  height: 40px;
+  background: black;
+  width: 100%;
+  position: absolute;
+  top: 30px;
+  left: 0;
+}
+
+.Reversa .Datos {
+  margin-top: 60px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.Reversa .Datos {
+  margin-bottom: 5px;
+}
+
+.Reversa .Datos #Firma {
+  width: 70%;
+}
+
+.Reversa .Datos #firma .firma {
+  height: 40px;
+  background: repeating-linear-gradient(skyblue 0, skyblue 5px, orange 5px, orange 5px );
+}
+
+.Reversa .Datos #firma .firma p {
+  line-height: 40px;
+  font-family: 'Liu Jian Mao Cao', cursive;
+  color: black;
+  font-size: 30px;
+  padding: 0 10px;
+  text-transform: capitalize;
 }
