Edición: Lista Select  Mes y Año

--- a/src/style.css
+++ b/src/style.css
@@ -371,7 +371,7 @@ body, html {
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: rgb(46, 48, 47);
+  background-color: black;
   color: white;
   text-align: center;
   font-size: xx-small;
