Feat: Funciones para el input numero de tarjeta

--- a/src/style.css
+++ b/src/style.css
@@ -418,6 +418,10 @@ button.verificar {
   background-position: center;
 }
 
+/* .GifContactanos:hover {
+  
+} */
+
         /* PIE DE PAGINA */
 .footer {
   position: fixed;
