--- a/src/style.css
+++ b/src/style.css
@@ -178,12 +178,12 @@ body, html {
   padding-bottom: 10px;
 }
 
-.Delantera .Tipo-logo {
+.Delantera .Tipo-Marca {
   text-align: right;
   min-height: 50px;
 }
 
-.Delantera .Tipo-logo img {
+.Delantera .Tipo-Marca img {
   width: 100%;
   height: 100%;
   object-fit: cover;
