--- a/src/style.css
+++ b/src/style.css
@@ -64,7 +64,7 @@ body, html {
 
 .BoxIntro {
   font-size: 14px;
-  padding: 5px 20px;
+  padding: 0px 20px;
 }
 .BoxIntro p{
   color: black;
@@ -219,6 +219,7 @@ body, html {
 /* TARJETA: REVERSA */
 
 .Tarjeta .Reversa {
+  width: 100%;
   background: url(./img/Tarjeta/Fondo.jpg);
   box-shadow: 10px 13px 12px 2px #333333ba;
   background-size: cover;
@@ -248,7 +249,7 @@ body, html {
 }
 
 .Reversa .grupo .label {
-  font-size: 14px;
+  font-size: 12px;
   color: white;
   margin-bottom: 0;
 }
@@ -424,7 +425,7 @@ button.verificar {
 
         /* PIE DE PAGINA */
 .footer {
-  position: fixed;
+  /* position: fixed; */
   left: 0;
   bottom: 0;
   width: 100%;
