--- a/src/style.css
+++ b/src/style.css
@@ -104,7 +104,7 @@ body, html {
 }
 
 .Info img {
-  width: 30%;
+  width: 24%;
 }
 
         /* MAIN: VALIDAR TARJETA */
@@ -161,7 +161,7 @@ body, html {
 .Tarjeta > div {
   padding: 30px;
   border-radius: 15px;
-  min-height: 315px;
+  /* min-height: 315px; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -174,7 +174,7 @@ body, html {
   background: url(./img/Tarjeta/Fondo.jpg);
   box-shadow: 10px 13px 12px 2px #333333ba;
   background-size: cover; /* Para que la imagen se adapte y no se corte*/
-  padding-top: 10px;
+  padding-top: 15px;
   padding-bottom: 10px;
 }
 
@@ -187,17 +187,16 @@ body, html {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  max-width: 70px;
+  max-width: 80px;
 }
 
 .Delantera .Chip {
   width: 100%;
   max-width: 50px;
-  margin-bottom: 20px;
 }
 
 .Delantera .grupo .label {
-  font-size: 16px;
+  font-size: 12px;
   color: white;
   margin-bottom: 5px;
 }
@@ -206,7 +205,7 @@ body, html {
 .Delantera .grupo .nombre,
 .Delantera .grupo .expiracion {
   color: white;
-  font-size: 16px;
+  font-size: 12px;
   text-transform: uppercase; /*Asegura que esten en mayusculas*/
 }
 
@@ -230,7 +229,7 @@ body, html {
 }
 
 .Reversa .Barra {
-  height: 35px;
+  height: 40px;
   background: black;
   width: 100%;
   position: absolute; 
@@ -301,7 +300,7 @@ body, html {
   color: white;
   position: relative;
   left: 100px;
-  top: 130px;
+  /* top: 130px; */
   z-index: 3;
   border-radius: 100%;
   box-shadow: -5px 4px 8px rgb(10 40 65);
@@ -324,7 +323,7 @@ body, html {
   background: rgb(255, 255, 255);
   width: 100%;
   max-width: 700px;
-  padding: 30px 30px 30px 150px;
+  padding: 0px 30px 0px 120px;
   border-radius: 15px;
   position: relative;
   left: 20px;
