--- a/src/style.css
+++ b/src/style.css
@@ -411,6 +411,73 @@ button.verificar {
 
         /* MAIN: BLOQUEAR TARJETA */
 
+.boxFormularioBloquear {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+}
+
+.boxFormularioBloquear img {
+  width: 60%;
+  margin-left: 150px;
+}
+
+.formularioBloquear {
+  display: flex;
+  flex-direction: column;
+  margin: 0px 200px 50px 50px ;
+}
+
+.formularioBloquear label{
+  color: rgb(95, 95, 95);
+  margin-bottom: 5px;
+  font-size: 14px;
+}
+.formularioBloquear input,
+.formularioBloquear select,
+.bloquear {
+  border: 2px solid rgb(168, 223, 245);
+  font-size: 14px;
+  height: 30px;
+  width: 100%;
+  padding: 5px 8px;
+  border-radius: 8px;
+}
+
+.formularioBloquear input:hover,
+.formularioBloquear select:hover {
+  border: 3px solid rgba(90, 116, 148, 0.3);
+}
+
+.formularioBloquear input:focus,
+.formularioBloquear select:focus {
+  outline: black;
+  box-shadow: 2px 8px 12px -6px rgba(89, 142, 206, 0.3);
+}
+
+.formularioBloquear input {
+  margin-bottom: 20px;
+  text-transform: uppercase;
+}
+
+.formularioBloquear .bloquear {
+  border: none;
+  padding: 12px;
+  font-size: 12px;
+  color: white;
+  background: rgb(10 40 65) ;
+  box-shadow: 2px 2px 10px 0px rgba(90, 116, 148, 0.3);
+  cursor: pointer;
+}
+
+.formularioBloquear .bloquear:hover {
+  background: rgb(59, 59, 59);
+}
+
+button.bloquear {
+  width: 174px;
+  height: 39px;
+}
 
         /* MAIN: CONTACTANOS */
 
@@ -418,15 +485,6 @@ button.verificar {
   width: 100%;
   height: 100%;
 }
-
-/* .GifContactanos {
-  width: 33.12%;
-  background-position: center;
-} */
-
-/* .GifContactanos:hover {
-  
-} */
 
         /* PIE DE PAGINA */
 .footer {
